src/objects/NttDataEpa__EpAdapterUnitOfWork__c.object
<CustomObject>
    <description>A unit of work to be handled by the EP adapter.</description>
    <fields>
        <fullName>NttDataEpa__Complexity__c</fullName>
        <formula>NttDataEpa__NumDmlStatements__c + NttDataEpa__NumDmlRecords__c / 100 + NttDataEpa__NumSoqlQueries__c + NttDataEpa__NumSoqlRecords__c / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__CpuTime__c</fullName>
        <label>CPU Time (msec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__EPA_Transaction_IDs__c</fullName>
        <description>Semicolon-separated list of involved EPA transactions (BTL)</description>
        <label>EPA Transaction IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Error_Message__c</fullName>
        <description>Error message in case of failed transaction</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumDmlRecords__c</fullName>
        <description>Number of records touched by DML statements.</description>
        <inlineHelpText>Number of records touched by DML statements.</inlineHelpText>
        <label>Number of DML Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumDmlStatements__c</fullName>
        <description>Number of DML statements issued</description>
        <inlineHelpText>Number of DML statements issued</inlineHelpText>
        <label>Number of DML Statements</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumSoqlQueries__c</fullName>
        <label>Number of SOQL Queries</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__NumSoqlRecords__c</fullName>
        <description>Number of records retrieved by SOQL queries.</description>
        <inlineHelpText>Number of records retrieved by SOQL queries.</inlineHelpText>
        <label>Number of SOQL Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__RunTime__c</fullName>
        <label>Run Time (msec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Status__c</fullName>
        <description>Status of the Unit of Work</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PENDING</fullName>
                    <default>true</default>
                    <label>PENDING</label>
                </value>
                <value>
                    <fullName>PROCESSED</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NttDataEpa__TriggeredDateTime__c</fullName>
        <description>The timestamp when the unit of work has been initially triggered</description>
        <label>TriggeredDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATOMIC_SINGLE</fullName>
                </value>
                <value>
                    <fullName>ATOMIC_MULTIPLE</fullName>
                </value>
                <value>
                    <fullName>COMPOUND_SAME_TYPE</fullName>
                </value>
                <value>
                    <fullName>COMPOUND_MULTIPLE_TYPES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NttDataEpa__UnitOfTransfer__c</fullName>
        <label>Unit of Transfer</label>
        <referenceTo>NttDataEpa__EpAdapterUnitOfTransfer__c</referenceTo>
        <relationshipLabel>Units of Work</relationshipLabel>
        <relationshipName>Units_of_Work</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__UnitOfWorkId__c</fullName>
        <externalId>true</externalId>
        <label>UnitOfWorkId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Unit of Work</label>
    <listViews>
        <fullName>NttDataEpa__All</fullName>
        <columns>NAME</columns>
        <columns>NttDataEpa__UnitOfWorkId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NttDataEpa__TriggeredDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Unit of Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units of Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>